[package]
name = "lncli"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A simple TUI based light novel reader."
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
cursive = { version = "0.20.0", features = [
    "crossterm-backend",
    "markdown",
    "toml",
] }
dirs = "4.0.0"
lipsum = "0.8.2"
log = "0.4.17"
open = "3.2.0"
owo-colors = "3.5.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
regex = "1.7.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
ureq = "2.5.0"
url = "2.3.1"
visdom = "0.5.7"
