[package]
name = "lncli"
version = "1.0.1"
edition = "2021"
license = "MIT"
description = "A simple TUI based light novel reader."
readme = "README.md"
repository = "https://github.com/lyssieth/lncli"
keywords = ["light novel", "reader", "tui", "cli", "terminal"]
categories = ["text-processing", "terminal", "application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
cursive = { version = "0.20.0", features = [
    "crossterm-backend",
    "markdown",
    "toml",
] }
dirs = "5.0.1"
lipsum = "0.9.0"
log = "0.4.20"
open = "5.0.0"
owo-colors = "3.5.0"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
regex = "1.9.5"
reqwest = { version = "0.11.20", features = [
    "rustls-tls",
    "blocking",
], default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
url = "2.4.1"
visdom = "0.5.10"
